# femagtools

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  conda_deploy.sh  conda_upload.sh  dxfconv.py  pyproject.toml  read_outer_rotor.py  requirements.txt  setup.py  test_parstudy.py  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
docs/: Makefile  amazon_engine.rst  amela.rst  api.rst  apidocs.rst  bchreader.rst  conf.py  dakota.rst  engine.rst  femag.rst  forcedens.rst  google_engine.rst  index.rst  intro.rst  mcv.rst  models.rst  ncisa.rst  requirements.txt  sizing.rst  tspost.rst  userspec.fsl  userspec.rst  windings.rst
docs/dxfsl-converter/: dxfsl-converter-anleitung.tex  dxfsl-converter-manual.tex
examples/: README  cogg-2.py  cogg_calc.py  cogg_fast.py  create-model-0.py  create-model-1.py  create-model-2.py  create-model-3.py  create-model-4.fsl  femag.fsl  fieldweakening.py  ld_lq_fast.py  parvar.py  plot_mcv.py  pm_linear.py  pm_sym_fast.py  pm_sym_loss.py  pmchar.py  pmopt.py  pmrsim.py  psd_psq_fast.py  read_bch-0.py  ring-magnet.fsl  spoke.fsl  spokefml.fsl  write_mcv.py
femagtools/: __init__.py  afm.py  airgap.py  amazon.py  amela.py  asm.py  bch.py  bchxml.py  condor.py  config.py  convert.py  dakota.py  dakota_femag.py  dakotaout.py  docker.py  ecloss.py  erg.py  femag.py  forcedens.py  fsl.py  getset.py  gmsh.py  google.py  grid.py  hxy.py  im.py  isa7.py  jcf2msh.py  jhb.py  job.py  lhs.py  losscoeffs.py  machine.py  magcurv.py  magnet.py  mcv.py  mcvreader.py  me.py  model.py  moproblem.py  (+17 more)
jupyter/: BchFileReader.ipynb  Introduction.ipynb  MachineCharacteristics.ipynb  MaterialHandling.ipynb  ModelsAndFemag.ipynb  ParameterVariationAndOptimization.ipynb  TEST_002.BCH  spokefml.fsl
notebooks/: 0-Introduction.ipynb  1-ModelsAndFemag.ipynb  2-MaterialHandling.ipynb  3-Windings.ipynb  4-BchFileReader.ipynb  5-MachineCharacteristics.ipynb  5-MachineCharacteristicsEfficiencyMaps.ipynb  6-MagnetLosses.ipynb  7-ParameterVariationAndOptimization.ipynb  8-IronLosses.ipynb  9-Eccentricity-Analysis.ipynb  BchFileReader.ipynb  Introduction.ipynb  M270-35A.MCV  M400-50A.MCV  MachineCharacteristics.ipynb  Magnet_losses.ipynb  MaterialHandling.ipynb  ModelsAndFemag.ipynb  PM270L8.vtu  PM_270_L8_001.BATCH  ParameterVariationAndOptimization.ipynb  Run_amela.ipynb  TKS_M270-50_A.txt  TKS_M_330-35_A.txt  VTK-Postprocessing.ipynb  Windings.ipynb  magnetfsl.mako
tests/: test_afm.py  test_afpm.py  test_airgap_induction.py  test_amela.py  test_asm.py  test_bchreader.py  test_bchreader.py~  test_convert.py  test_effloss.py  test_erg.py  test_femag.py  test_forcedens.py  test_fsl.py  test_fsl.py~  test_grid.py  test_im.py  test_isa7.py  test_jhb.py  test_job.py  test_losscoeffs.py  test_machine.py  test_magncurv.py  test_magnet.py  test_mcvreader.py  test_mcvwriter.py  test_me.py  test_model.py  test_nc.py  test_parident.py  test_pocfile.py  test_sizing.py  test_sm.py  test_tksreader.py  test_ts.py  test_vbfreader.py  test_vtu.py  test_winding_diagram.py  test_windings.py
(+537 files in other folders)
