[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "femagtools"
authors = [
    {name = "Ronald Tanner", email = "tar@semafor.ch"},
    {name = "Dapu Zhang", email = "dzhang@gtisoft.com"},
    {name = "Beat Holm", email = "hob@semafor.ch"},
    {name = "Günther Amsler", email = "amg@semafor.ch"},
    {name = "Nicolas Mauchle", email = "mau@semafor.ch"}
]
description = "Python API for FEMAG"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Topic :: Scientific/Engineering"
]
dependencies = [
    'numpy',
    'scipy',
    'mako',
    'six',
    'lmfit',
    'netCDF4>=1.6.5',     # >=1.6.5 to mitigate CVE-2023-38545
]
dynamic = ["version"]

[project.optional-dependencies]
rdp = ['rdp']  # reduce nodes in dxf/svg fsl conversion
dxfsl = ['dxfgrabber', 'networkx']
svgfsl = ['dxfgrabber', 'networkx', 'lxml']
mplot =  ['matplotlib']
meshio = ['meshio']
vtk = ['vtk']
zmq = ['pyzmq']
test = ['pytest']
all = ['femagtools[dxfsl,svgfsl,mplot,meshio,vtk,zmq,test]']    # add new dependency groups here as well

[project.scripts]
femagtools-plot = "femagtools.plot.bch:main"
femagtools-convert = "femagtools.convert:main"
femagtools-bchxml = "femagtools.bchxml:main"
femagtools-dxfsl = "femagtools.dxfsl.conv:main"
femagtools-svgfsl = "femagtools.svgfsl.converter:main"

[tool.setuptools.dynamic]
version = {attr = "femagtools.__version__"}
